remove inline block on small as irt was causing issues

--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -393,8 +393,6 @@
   }
 
   %small-text {
-    @extend %max-width--p;
-    display: inline-block;
     font-size: 1rem / pow($ms-ratio, 1);
     line-height: map-get($line-heights, small);
     margin-bottom: map-get($sp-after, small) + map-get($line-heights, default-text) - map-get($line-heights, small) - map-get($nudges, nudge--small);
